--- a/contact.html
+++ b/contact.html
@@ -24,10 +24,10 @@
             <br>
             <form class="suggestions" action="https://httpbin.org/post" method="POST">
                 <fieldset>                    
-                    <label for="name">WHAT'S YOUR NAME?</label>
-                    <input type="text" name="name" id="name" placeholder="Enter your name here..." pattern="[A-Za-z]*" required><br>
-                    <output for="name" id="name_error"></output><br>
-                    <output for="name" id="name_info"></output><br>
+                    <label for="form_name">WHAT'S YOUR NAME?</label>
+                    <input type="text" name="form_name" id="form_name" placeholder="Enter your name here..." pattern="[A-Za-z ]*" required><br>
+                    <output for="form_name" id="name_error"></output><br>
+                    <output for="form_name" id="name_info"></output><br>
                 
                     <label for="email">WHAT'S YOUR EMAIL?</label>
                     <input type="email" name="email" id="email" placeholder="example@gmail.com" required><span></span><br>
@@ -48,6 +48,7 @@
                 </fieldset>
             </form>
         </main>
+        <script src="scripts/script.js"></script>
     </body>
 </html>
 
