--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         <header class="header_container">
 
             <label id="theme_switcher">
-                <input type="checkbox" id="theme_switcher" onclick="themeButton()">
+                <input type="checkbox" class="theme_switcher" onclick="themeButton()">
                 <span class="theme_switch"></span>
             </label>
 
