--- a/contact.html
+++ b/contact.html
@@ -8,14 +8,23 @@
         <meta name="keywords" content="About Me, University of California San Diego, Peanut Gallery">
         <link rel="stylesheet" type="text/css" href="styles/style.css">
         <title>Contact Me</title>
+
+        <style>
+            input[type="checkbox"]{
+                display: none;
+            }
+        </style>
+
     </head>
     <body>
         <header class="header_container">
 
-            <label id="theme_switcher">
-                <input type="checkbox" class="theme_switcher" onclick="themeButton()">
-                <span class="theme_switch"></span>
-            </label>
+            <div id="theme">
+                <label for="theme_switcher">
+                    <input type="checkbox" id="theme_switcher" onclick="themeButton()">
+                    <span class="theme_switch"></span>
+                </label>
+            </div>
 
             <nav class="navigation">
                 <ul id="menu">
@@ -55,6 +64,7 @@
             </form>
         </main>
         <script src="scripts/script.js"></script>
+        <script src="scripts/theme.js"></script>
     </body>
 </html>
 
