--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
             <h1 class="homepage_header">JUNG TZEN LIEW</h1>
         </header>
         <main class="homepage">
-            <label for="theme_switcher">
-                <input type="checkbox" id="theme_switcher" onclick="themeButton()">
-                <span class="theme_switch"></span>
-            </label>
+            <div id="theme">
+                <label for="theme_switcher">
+                    <input type="checkbox" id="theme_switcher" onclick="themeButton()">
+                    <span class="theme_switch"></span>
+                </label>
+            </div>
+            
             <h2 class="homepage_nav">
                 <a href="all_about_me.html" class="tab">ABOUT ME</a>
                 <a href="documents.html" class="tab">LET'S GET PROFESSIONAL</a>
@@ -52,5 +55,6 @@
             </picture>
         </main>
         <script src="scripts/script.js"></script>
+        <script src="scripts/theme.js"></script>
     </body>
 </html>
